feat: use NavigationGroup component for secondary navbar also

--- a/components/layout/navbarSecondary/navbarSecondary.module.scss
+++ b/components/layout/navbarSecondary/navbarSecondary.module.scss
@@ -13,7 +13,6 @@
     }
     a {
       display: block;
-      /* padding: 0.5rem 0; */
       margin-top: toRem(10);
       position: relative;
       z-index: 1;
@@ -30,53 +29,51 @@
   }
 }
 
-.hasSublist::after {
-  font-family: "arrow-down";
-  content: "\e900";
-  font-size: 0.3rem;
-  padding: 0 0 0 1em;
-  transform: translateY(-0.3em);
-  color: #999;
-  display: inline-block;
-}
+.navbarSecondaryV2 {
+  padding-left: 0;
+  margin: 0;
+  height: 100%;
+  @include desktop() {
+    padding-left: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
-.sublist {
-  display: none;
-  position: absolute;
-  top: 0.9rem;
-  right: 0;
-  background-color: #fff;
-  box-shadow: 0 0 1rem 0.125rem rgba(0, 0, 0, 0.12);
-  background-color: #ffffff;
-  border: 0.1rem solid #e5e5e5;
-  padding: 0.5rem 1.7rem 1.5rem 1.7rem;
-  width: 15em;
-  &::after {
-    content: "";
-    position: absolute;
-    top: -1em;
-    width: 5em;
-    height: 2em;
-    right: 0;
+    // Mobile toggle menu states
+    &.navbarSecondaryV2Active {
+      position: relative;
+      padding-top: 3.66rem;
+      @include desktop() {
+        position: initial;
+        padding-top: initial;
+      }
+    }
+    &.navbarSecondaryV2Hidden {
+      // Safari needs this
+      height: 0;
+      left: -2147483647px;
+      padding: 0;
+      position: absolute;
+      @include desktop() {
+        height: initial;
+        left: unset;
+        padding: initial;
+        position: initial;
+      }
+    }
   }
-  &::before {
-    position: absolute;
-    width: 1rem;
-    height: 1rem;
-    background: #e5e5e5;
-    content: "";
-    transform: rotate(45deg);
-    top: -0.5rem;
-    right: 1rem;
-    z-index: -5;
-  }
-  li {
-    display: block;
+
+  // Nav group item
+  & > li {
+    overflow: hidden;
+    @include desktop() {
+      overflow: visible;
+      // position: relative;
+    }
   }
   a {
-    color: rgb(0, 8, 67);
-    &:hover {
-      color: $color-darkblue;
+    @include desktop() {
+      display: block;
     }
   }
 }
