feat: add new config options for firstFold, heroImage and richTextArea (new customer story pages)

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -85,6 +85,9 @@
     &.textContentBasis70 {
       flex-basis: 70%;
     }
+    .headerImage {
+      max-width: 16rem;
+    }
   }
   .text {
     margin-top: 1rem;
