feat: step form logic update

--- a/components/form/pardotForm/form.module.scss
+++ b/components/form/pardotForm/form.module.scss
@@ -4,6 +4,12 @@
 @import "../../../styles/settings/fonts";
 
 .pardotForm {
+  &.isHidden {
+    visibility: hidden;
+    height: 0;
+    position: absolute;
+    left: -2147483647px;
+  }
   label {
     display: block;
     padding: unset;
