--- a/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
+++ b/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
@@ -14,6 +14,7 @@
 .thumbnailWrap {
   background: #f0f6ff;
   border-radius: toRem(22);
+  padding-bottom: 1rem;
 }
 .thumbnail {
   max-width: toRem(400);
@@ -61,6 +62,17 @@
     width: 100%;
     font-size: toRem(22);
     cursor: pointer;
+  }
+  .mainButton {
+    & > div {
+      &:nth-child(2) {
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+        transform: translate(-50%, 120%);
+        margin: unset;
+      }
+    }
   }
 }
 .form {
