--- a/components/form/pardotForm/form.module.scss
+++ b/components/form/pardotForm/form.module.scss
@@ -18,7 +18,7 @@
       &:first-child {
         display: block;
         padding: 0.5rem 0;
-        margin-bottom: 0.25rem;
+        /*  margin-bottom: 0.25rem; */
       }
     }
   }
@@ -227,4 +227,8 @@
   display: flex;
   justify-content: center;
   grid-column: 1/-1;
+}
+
+.bt-1 {
+  border-top: toRem(1) solid $color-darkblue;
 }
