--- a/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
+++ b/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
@@ -19,6 +19,7 @@
   max-width: toRem(400);
   margin: 0 auto;
   padding: toRem(20) toRem(40) 0 toRem(40);
+  position: relative;
   img {
     border: toRem(4) solid $color-paleblue !important;
     border-radius: toRem(20);
