--- a/components/downloadButton/downloadButton.module.scss
+++ b/components/downloadButton/downloadButton.module.scss
@@ -4,6 +4,8 @@
 .downloadButton {
   position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: column;
   .innerButton {
     &:hover {
       cursor: pointer;
@@ -16,7 +18,7 @@
     min-width: 20rem;
     z-index: 9999;
     padding: toRem(10) toRem(40) toRem(10) toRem(40);
-    margin: toRem(20) toRem(40);
+    margin: 0 toRem(40) toRem(40);
     max-width: toRem(320);
     border-radius: toRem(20);
     @include shadow();
