--- a/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
+++ b/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
@@ -14,6 +14,32 @@
 .thumbnailWrap {
   background: #f0f6ff;
   border-radius: toRem(22);
+  max-width: 25rem;
+  &.fullWidth {
+    max-width: 100%;
+    h2 {
+      & > span:first-of-type {
+        max-width: toRem(38) !important;
+        flex: 1;
+      }
+      & > span:nth-of-type(2) {
+        flex: 6;
+      }
+    }
+  }
+  & h2 {
+    & > span:first-of-type {
+      max-width: toRem(60) !important;
+      display: flex;
+      flex-direction: column;
+      flex: 1;
+    }
+    & > span:nth-of-type(2) {
+      display: flex;
+      flex-direction: column;
+      flex: 8;
+    }
+  }
 }
 .thumbnail {
   max-width: toRem(400);
@@ -85,6 +111,11 @@
     }
     @include desktop() {
       grid-template-columns: 1fr 1fr;
+    }
+  }
+  .fullWidth {
+    .formTitle {
+      max-width: 100%;
     }
   }
   .formTitle {
