--- a/brand/components/brandTextWithMedia/brandTextWithMedia.module.scss
+++ b/brand/components/brandTextWithMedia/brandTextWithMedia.module.scss
@@ -294,7 +294,7 @@
       max-width: 7.8125rem;
       max-height: 7.8125rem;
       overflow: hidden;
-      & > span {
+      & > img {
         &:only-child {
           border-radius: 50%;
         }
