--- a/components/agility-pageModules/awardsBanner/awardsBanner.module.scss
+++ b/components/agility-pageModules/awardsBanner/awardsBanner.module.scss
@@ -11,17 +11,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    & > span {
-      height: 100% !important;
-      display: block !important;
-      &:only-child {
-        height: 100%;
-        img {
-          object-fit: cover;
-          height: unset;
-          width: unset;
-        }
-      }
+    & > img {
+      object-fit: cover;
     }
   }
   .content {
@@ -74,19 +65,8 @@
         display: flex;
         justify-content: center;
         width: 100%;
-        & > span {
-          &:only-child {
-            height: 100% !important;
-            width: 100% !important;
-            img {
-              object-fit: contain;
-              height: 100% !important;
-              width: 100% !important;
-            }
-          }
-        }
         &.awardImageSvg > span img {
-            position: relative !important;
+          position: relative !important;
         }
       }
     }
