--- a/components/agility-pageModules/callToAction/callToAction.module.scss
+++ b/components/agility-pageModules/callToAction/callToAction.module.scss
@@ -42,16 +42,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    & > span {
-      display: block !important;
-      &:only-child {
-        height: 100% !important;
-        img {
-          object-fit: cover;
-          height: unset;
-          width: unset;
-        }
-      }
+    & > img {
+      object-fit: cover;
     }
   }
   .content {
