--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -17,26 +17,10 @@
     align-items: center;
     text-align: center;
   }
-  & > span {
+  & > img {
     position: absolute !important;
-    top: 0;
-    left: 0;
-    width: 100% !important;
-    min-height: 100%;
-    height: 100%;
     z-index: 1;
-    &:only-child {
-      position: absolute;
-      top: 0;
-      left: 0;
-      object-fit: fill;
-      // Have to override
-      width: 100% !important;
-      height: 100% !important;
-      img {
-        object-fit: cover;
-      }
-    }
+    object-fit: cover;
   }
   @include desktop() {
     padding: unset;
@@ -44,17 +28,11 @@
     min-height: 21.25rem;
     overflow: hidden;
     position: relative;
-    & > span {
-      &:only-child {
-        position: absolute !important;
-        top: 0;
-        left: 0;
-        height: 100% !important;
-        img {
-          object-fit: cover;
-          height: unset !important;
-        }
-      }
+    & > img {
+      position: absolute !important;
+      top: 0;
+      left: 0;
+      object-fit: cover;
     }
     &.heroImageNarrowHeight {
       min-height: 12.5rem;
