--- a/components/agility-pageModules/infographic/infographic.module.scss
+++ b/components/agility-pageModules/infographic/infographic.module.scss
@@ -54,9 +54,6 @@
             img {
               max-width: 3rem !important;
             }
-            & > span {
-              min-width: 3rem;
-            }
           }
           .itemTextContent {
             .itemDescription {
@@ -83,9 +80,6 @@
             justify-content: center;
             img {
               max-width: 2.5rem !important;
-            }
-            & > span {
-              min-width: 2.5rem;
             }
           }
           .itemTextContent {
@@ -139,9 +133,6 @@
         .itemMedia {
           display: flex;
           justify-content: center;
-          & > span {
-            min-width: 6rem;
-          }
           padding-bottom: 1rem;
           .itemTitle {
             text-align: center;
@@ -170,9 +161,6 @@
         .itemMedia {
           display: flex;
           justify-content: center;
-          & > span {
-            min-width: 6rem;
-          }
         }
         .itemTextContent {
           justify-content: flex-start;
@@ -232,11 +220,6 @@
         .itemTitle {
           font-size: 2.25rem;
         }
-        .itemMedia {
-          & > span {
-            max-width: 6rem;
-          }
-        }
         .itemTextContent {
           .itemDefinition {
             color: $color-navy;
@@ -263,15 +246,10 @@
         justify-content: flex-end;
         align-items: center;
         margin-bottom: 1rem;
-        & > span {
-          min-width: 9.375rem;
+        & > img {
+          max-width: 9.375rem;
           max-height: 9.375rem;
-          img {
-            width: 100% !important;
-            object-fit: contain;
-            height: unset !important;
-            min-height: unset !important;
-          }
+          object-fit: contain;
         }
       }
       .itemTitle {
