--- a/components/agility-pageModules/modal/modal.module.scss
+++ b/components/agility-pageModules/modal/modal.module.scss
@@ -87,17 +87,8 @@
   width: 100%;
   height: 100%;
   z-index: 0;
-  & > span {
-    display: block;
-    width: 100%;
-    &:only-child {
-      height: 100%;
-      img {
-        object-fit: cover;
-        height: unset;
-        width: unset;
-      }
-    }
+  & > img {
+    object-fit: cover;
   }
 }
 
