--- a/components/agility-pageModules/textWithInfographic/textWithInfographic.module.scss
+++ b/components/agility-pageModules/textWithInfographic/textWithInfographic.module.scss
@@ -177,17 +177,11 @@
             box-shadow: 0 0 1rem -0.25rem $color-darkmediumgray;
             width: max-content;
             img {
-              object-fit: contain !important;
+              object-fit: contain;
+              max-width: 2.75rem;
+              max-height: 2.75rem;
             }
-            & > span {
-              max-width: 2.75rem !important;
-              max-height: 2.75rem !important;
-              min-width: 2.75rem !important;
-              min-height: 2.75rem !important;
-              width: 100%;
-              display: flex !important;
-              align-items: center !important;
-            }
+
             &.svgMediaContainer {
               img {
                 position: relative !important;
