--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -95,6 +95,7 @@
     // Overflow fallback for Safari
     overflow: hidden;
     overflow: clip;
+    margin-top: auto;
     @include desktop() {
       margin-top: initial;
     }
