--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -32,6 +32,7 @@
       position: absolute !important;
       top: 0;
       left: 0;
+      height: 100%;
       object-fit: cover;
     }
     &.heroImageNarrowHeight {
