--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -29,6 +29,15 @@
           margin-left: 1.5rem;
         }
       }
+      .logosList {
+        &:not(.columnsLayout) {
+          .logo {
+            img {
+              max-width: 16rem;
+            }
+          }
+        }
+      }
     }
   }
   .textContent {
