--- a/components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
+++ b/components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
@@ -21,20 +21,15 @@
       background: transparentize($color: #000, $amount: 0.35);
     }
     .backgroundImage {
-      & > * {
-        display: block !important;
-        height: 100% !important;
-      }
-      position: absolute !important;
+      position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
       img {
         object-fit: cover;
-        max-height: unset !important;
-        min-height: unset !important;
-        height: 100% !important;
+        width: 100%;
+        height: 100%;
       }
     }
     .title {
