--- a/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
+++ b/components/agility-pageModules/resourceDownload/resourceDownload.module.scss
@@ -18,23 +18,23 @@
   &.fullWidth {
     max-width: 100%;
     h2 {
-      & > span:first-of-type {
+      & > img {
         max-width: toRem(38) !important;
         flex: 1;
       }
-      & > span:nth-of-type(2) {
+      & > span {
         flex: 6;
       }
     }
   }
   & h2 {
-    & > span:first-of-type {
+    & > img {
       max-width: toRem(60) !important;
       display: flex;
       flex-direction: column;
       flex: 1;
     }
-    & > span:nth-of-type(2) {
+    & > span {
       display: flex;
       flex-direction: column;
       flex: 8;
