--- a/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
+++ b/components/agility-pageModules/leadershipPageContent/leadershipPageContent.module.scss
@@ -53,6 +53,7 @@
         height: 100%;
         border-radius: 50%;
         background-color: unset;
+        max-width: 16.4375rem;
         transition: background-color 0.25s ease-in-out;
       }
     }
