--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -361,10 +361,8 @@ blog posts or anywhere where html is rendered */
       max-width: 50vw;
       height: unset;
       &.fixed-width-56px {
-        @include touch() {
-          width: 56px;
-          display: inline-block;
-        }
+        width: 56px !important;
+        display: inline-block;
       }
       @include touch() {
         max-width: 70vw;
