fix: bug where some hidden data fields failed to be added on step form submission

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -368,6 +368,8 @@
 .is-hidden {
   visibility: hidden;
   height: 0;
+  position: absolute;
+  left: -2147483647px;
 }
 
 .transparentized-navbar-transform {
