reduced navbar dropdown side paddings

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -274,7 +274,7 @@
     @include desktop() {
       top: 4rem;
       left: -2147483647px;
-      padding: 1rem 2rem 1rem 2rem;
+      padding: 1rem 1.8rem;
       position: absolute;
       background: #fff;
       text-align: left;
