--- a/components/agility-pageModules/flexColumnTableWithHeading/flexColumnTableWithHeading.module.scss
+++ b/components/agility-pageModules/flexColumnTableWithHeading/flexColumnTableWithHeading.module.scss
@@ -57,7 +57,6 @@
         width: 100%;
         .columnTitle,
         .columnCell {
-          th,
           td {
             font-size: 1rem;
           }
@@ -94,6 +93,8 @@
             font-weight: bold;
             padding-bottom: 0.5rem;
             display: flex !important;
+            border-bottom: unset;
+            font-size: 1.2rem;
             @include largeTouch() {
               padding-top: 2rem;
               border-top: 1px solid #c2ddef;
@@ -104,7 +105,6 @@
         .columnCell {
           display: block;
           height: max-content;
-          th,
           td {
             display: block;
             padding-top: 1rem;
@@ -115,6 +115,13 @@
               padding-top: 0.75rem;
               padding-left: unset;
               padding-bottom: unset;
+            }
+          }
+          th {
+            @include largeDesktop() {
+              padding-left: unset;
+              padding-top: 0.75rem;
+              padding-bottom: 0.5rem;
             }
           }
         }
